--- a/index.html
+++ b/index.html
@@ -468,16 +468,16 @@
             if (s <= 1.0) {
                 return scene0(p, s);
             } else if (s <= 2.0) {
-                return scene1(p, s - 1.0);
+                return scene5(p, s - 1.0);
             } else if (s <= 3.0) {
-                return scene2(p, s - 2.0);
+                return scene1(p, s - 2.0);
             } else if (s <= 4.0) {
-                return scene3(p, s - 3.0);
+                return scene4(p, s - 3.0);
             } else if (s <= 5.0) {
-                return scene4(p, s - 4.0);
+                return scene2(p, s - 4.0);
             } else if (s <= 6.0) {
-                return scene5(p, s - 5.0);
-            } else {
+                return scene3(p, s - 5.0);
+            } else if (s <= 7.0) {
                 return scene6(p, s - 6.0);
             }
         }
@@ -507,7 +507,7 @@
                 if (num == 0) {
                     break;
                 } else {
-                    cp = vec2(font_size*(float(i-3)-wid), 1.0-font_size*3.0);
+                    cp = vec2(font_size*(float(i-2)-wid), 1.0-font_size*3.0);
                     tmp = modi(num, 2);
                     if (tmp == 0) {
                         cd = circleSDF(
@@ -548,7 +548,8 @@
 
     <script id="graphics">
         var program, canvas, gl, buffer, res_loc, score_loc, coord_loc,
-            anim_loc, can_click_loc, mouse_loc, start_time, cur_time, date_o;
+            anim_loc, can_click_loc, mouse_loc,
+            start_time, cur_time, date_o;
 
         var started = false;
         var nticks = 0;
